src/objects/Community__c.object
<CustomObject>
    <description>MG_Community</description>
    <fields>
        <fullName>Acreage__c</fullName>
        <label>Acreage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Tax_Assessment__c</fullName>
        <label>Additional Tax Assessment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_calc__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBSA__c</fullName>
        <label>CBSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_calc__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Characteristics__c</fullName>
        <label>Community Characteristics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Characteristics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Key__c</fullName>
        <externalId>true</externalId>
        <label>Community Key</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Community_Open_Date__c</fullName>
        <inlineHelpText>&quot;Value to be displayed as year only in Master Plan Report.&quot;</inlineHelpText>
        <label>Community Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Community_Website__c</fullName>
        <label>Community Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>County_calc__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Reported_Sales_YTD__c</fullName>
        <description>Number of Sales (YTD) reported by the developer.</description>
        <inlineHelpText>Number of Sales (YTD) reported by the developer.</inlineHelpText>
        <label>Developer Reported Sales (YTD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_in_Zonda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display in Zonda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Follow Up</fullName>
                    <default>true</default>
                    <label>Follow Up</label>
                </value>
                <value>
                    <fullName>Baselined</fullName>
                </value>
                <value>
                    <fullName>Archive</fullName>
                    <isActive>false</isActive>
                    <label>Archive</label>
                </value>
                <value>
                    <fullName>Uncooperative</fullName>
                    <isActive>false</isActive>
                    <label>Uncooperative</label>
                </value>
                <value>
                    <fullName>Validated</fullName>
                    <isActive>false</isActive>
                    <label>Validated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Large_Scale_Amenities__c</fullName>
        <label>Large-Scale Amenities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active Adult</fullName>
                </value>
                <value>
                    <fullName>Amphitheater</fullName>
                </value>
                <value>
                    <fullName>Ball Fields</fullName>
                </value>
                <value>
                    <fullName>Civic Uses</fullName>
                </value>
                <value>
                    <fullName>Clubhouse</fullName>
                </value>
                <value>
                    <fullName>Community Gardens</fullName>
                </value>
                <value>
                    <fullName>Country Club</fullName>
                </value>
                <value>
                    <fullName>Dog Park</fullName>
                </value>
                <value>
                    <fullName>Fitness Center</fullName>
                </value>
                <value>
                    <fullName>Gated</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Hotels</fullName>
                </value>
                <value>
                    <fullName>Mixed-Use</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Open Space</fullName>
                </value>
                <value>
                    <fullName>Parks</fullName>
                </value>
                <value>
                    <fullName>Playground</fullName>
                </value>
                <value>
                    <fullName>Pool(s)</fullName>
                </value>
                <value>
                    <fullName>Recreation Center</fullName>
                </value>
                <value>
                    <fullName>Resort</fullName>
                </value>
                <value>
                    <fullName>Restaurant(s)</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Schools</fullName>
                </value>
                <value>
                    <fullName>Splash Pads</fullName>
                </value>
                <value>
                    <fullName>Tennis Courts</fullName>
                </value>
                <value>
                    <fullName>Trails</fullName>
                </value>
                <value>
                    <fullName>Transit Oriented Development</fullName>
                </value>
                <value>
                    <fullName>Waterfront Recreation</fullName>
                </value>
                <value>
                    <fullName>Water Slides</fullName>
                </value>
                <value>
                    <fullName>Tot Lots</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Validation_Date_Community__c</fullName>
        <inlineHelpText>This is a manual field</inlineHelpText>
        <label>Last Validation Date (Community)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Validation_Quarter__c</fullName>
        <formula>IF( MONTH( Last_Validation_Date_Community__c ) = 1 || MONTH( Last_Validation_Date_Community__c ) = 2 || MONTH( Last_Validation_Date_Community__c ) = 3, &apos;Q1&apos;, IF( MONTH( Last_Validation_Date_Community__c ) = 4 || MONTH( Last_Validation_Date_Community__c ) = 5 || MONTH( Last_Validation_Date_Community__c ) = 6, &apos;Q2&apos;, IF( MONTH( Last_Validation_Date_Community__c ) = 7 || MONTH( Last_Validation_Date_Community__c ) = 8 || MONTH( Last_Validation_Date_Community__c ) = 9, &apos;Q3&apos;, IF( MONTH( Last_Validation_Date_Community__c ) = 10 || MONTH( Last_Validation_Date_Community__c ) = 11 || MONTH( Last_Validation_Date_Community__c ) = 12, &apos;Q4&apos;, &apos;&apos;)))) + &apos; &apos; + TEXT( YEAR( Last_Validation_Date_Community__c ))</formula>
        <label>Last Validation Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Master_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Community__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Master Plan</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Village</relationshipLabel>
        <relationshipName>Master_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Notes_community__c</fullName>
        <description>Notes field on the Community object.</description>
        <label>Meyers Notes (community)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Rental_Units__c</fullName>
        <inlineHelpText>Rental Units as applicable</inlineHelpText>
        <label>Number of Rental Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <inlineHelpText>This is an estimated value.</inlineHelpText>
        <label>Oldest Project Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outside_Geographic_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outside Geographic Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Location_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Location Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_Sold_Developer_Lots__c</fullName>
        <inlineHelpText>Developer Lots sold before our data collection. This is an estimated value.</inlineHelpText>
        <label>Prior Sold Developer Lots</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Sold_Units_hard_code__c</fullName>
        <label>Prior Sold Units (hard code)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_TUP_calc__c</fullName>
        <inlineHelpText>This is an estimated value.</inlineHelpText>
        <label>Project TUP (calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_TUS_calc__c</fullName>
        <inlineHelpText>This is an estimated value.</inlineHelpText>
        <label>Project TUS (calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region_ID__c</fullName>
        <label>Region ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region_ID</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rental_Units_hard_code__c</fullName>
        <label>Rental Units (hard code)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Research_Status__c</fullName>
        <description>For the Teams annual review add a new Baselined status with the current year</description>
        <inlineHelpText>Each year the team will review and update the Baselined status to &quot;Baselined CURRENTYEAR&quot;</inlineHelpText>
        <label>Research Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Follow up required</fullName>
                    <default>true</default>
                    <label>Follow up required</label>
                </value>
                <value>
                    <fullName>Baselined 2018</fullName>
                </value>
                <value>
                    <fullName>Baselined 2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Call_Center__c</fullName>
        <description>Sales Call Center for Master Planned Community</description>
        <inlineHelpText>Sales Call Center for Master Planned Community</inlineHelpText>
        <label>Sales Call Center</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shape_File_URL__c</fullName>
        <description>Location of the shape file in url format.</description>
        <inlineHelpText>Location of the shape file in url format.</inlineHelpText>
        <label>Shape File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Short_URL__c</fullName>
        <description>Shortened URL</description>
        <inlineHelpText>Shortened URL</inlineHelpText>
        <label>Short URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Site_Plan_URL__c</fullName>
        <description>Location of the site plan in url format.</description>
        <inlineHelpText>Location of the site plan in url format.</inlineHelpText>
        <label>Site Plan URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>State_Calc__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Sold Out</fullName>
                </value>
                <value>
                    <fullName>Upcoming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Developer_Lots_Available_calc__c</fullName>
        <formula>Total_Developer_Lots_Planned__c  - ( Project_TUP_calc__c  +  Prior_Sold_Developer_Lots__c + Number_of_Rental_Units__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an estimated value.</inlineHelpText>
        <label>Total Developer Lots Available (calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Developer_Lots_Available_manual__c</fullName>
        <inlineHelpText>This is an estimated value. For collection when other values are unavailable.</inlineHelpText>
        <label>Total Developer Lots Available (manual)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Developer_Lots_Planned__c</fullName>
        <inlineHelpText>This is an estimated value.</inlineHelpText>
        <label>Total Developer Lots Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Units_Planned_hard_code__c</fullName>
        <label>Total Units Planned (hard code)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Units_Remaining__c</fullName>
        <formula>Project_TUP_calc__c  -  Project_TUS_calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an estimated value.</inlineHelpText>
        <label>Project TUR (calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Units_Remaining_calc__c</fullName>
        <formula>Total_Units_Planned_hard_code__c  -  Project_TUS_calc__c  -  Prior_Sold_Units_hard_code__c  - Rental_Units_hard_code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Units Remaining (calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unsold_Developer_Units__c</fullName>
        <description>Created so that Research could vide this field without going into the App.
-- currently this calc is done in the DB and this field is NOT passed to the DB</description>
        <formula>Total_Units_Planned_hard_code__c - ( Prior_Sold_Units_hard_code__c +  Project_TUP_calc__c +  Rental_Units_hard_code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calc field - cannot be negative. No manual updates needed.

Total_Units_Planned (hard code) - ([Prior_Sold_Units (hard code) + Project TUP (calc) + Rental Units (hard code))  -- currently this calc is done in the DB this field is not passed to the DB</inlineHelpText>
        <label>Unsold Developer Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZIP_Code_calc__c</fullName>
        <label>ZIP Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Community</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Region_ID__c</columns>
        <columns>State_Calc__c</columns>
        <columns>Master_Plan__c</columns>
        <columns>Location__Latitude__s</columns>
        <columns>Location__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Master_Plans</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Open_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Project_TUP_calc__c</columns>
        <columns>Project_TUS_calc__c</columns>
        <columns>Total_Developer_Lots_Available_calc__c</columns>
        <columns>Total_Developer_Lots_Planned__c</columns>
        <columns>Total_Units_Remaining__c</columns>
        <columns>Prior_Sold_Developer_Lots__c</columns>
        <columns>Acreage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Community__c.Master_Plan</value>
        </filters>
        <label>All Master Plans</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Neighborhoods</fullName>
        <columns>NAME</columns>
        <columns>Open_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Project_TUP_calc__c</columns>
        <columns>Project_TUS_calc__c</columns>
        <columns>Total_Developer_Lots_Available_calc__c</columns>
        <columns>Total_Developer_Lots_Planned__c</columns>
        <columns>Total_Units_Remaining__c</columns>
        <columns>Prior_Sold_Developer_Lots__c</columns>
        <columns>Acreage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Community__c.Neighborhood</value>
        </filters>
        <filters>
            <field>Display_in_Zonda__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Neighborhoods</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Villages</fullName>
        <columns>NAME</columns>
        <columns>Open_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Master_Plan__c</columns>
        <columns>Project_TUP_calc__c</columns>
        <columns>Project_TUS_calc__c</columns>
        <columns>Total_Developer_Lots_Available_calc__c</columns>
        <columns>Total_Developer_Lots_Planned__c</columns>
        <columns>Total_Units_Remaining__c</columns>
        <columns>Prior_Sold_Developer_Lots__c</columns>
        <columns>Acreage__c</columns>
        <columns>Location__Latitude__s</columns>
        <columns>Location__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Community__c.Village</value>
        </filters>
        <label>All Villages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Upcoming_Master_Plans</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Open_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Project_TUP_calc__c</columns>
        <columns>Project_TUS_calc__c</columns>
        <columns>Total_Developer_Lots_Available_calc__c</columns>
        <columns>Total_Developer_Lots_Planned__c</columns>
        <columns>Total_Units_Remaining__c</columns>
        <columns>Prior_Sold_Developer_Lots__c</columns>
        <columns>Acreage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Community__c.Master_Plan</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Upcoming</value>
        </filters>
        <filters>
            <field>Display_in_Zonda__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Upcoming Master Plans</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communities</pluralLabel>
    <recordTypes>
        <fullName>Master_Plan</fullName>
        <active>true</active>
        <description>1,000+ units with multiple product collections across multiple builders</description>
        <label>Master Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Neighborhood</fullName>
        <active>true</active>
        <description>Subdivision with &lt;1,000 units</description>
        <label>Neighborhood</label>
    </recordTypes>
    <recordTypes>
        <fullName>Village</fullName>
        <active>true</active>
        <description>Contains projects and rolls up into a Master Plan</description>
        <label>Village</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>